Fixed overlapping questions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,17 +120,17 @@ h1 {
     color: #000000;
     float: left;
     height: 100%;
-    width: 50%;
+    width: 30%;
     text-align: center;
     border-style: double;
 }
 
 .choice-answer {
-    padding-right: 1rem;
     background-color: #fafafa;
     width: 100%;
     height: 100%;
     border-style: double;
+    object-fit: contain;
 }
 
 .next-button {
